[package]
authors = ["E <edgeworth.dev@gmail.com>"]
categories = ["development-tools"]
description = "test golden file library"
edition = "2021"
keywords = ["golden", "test"]
license = "MIT OR Apache-2.0"
name = "moldenfile"
repository = "https://github.com/Edgeworth/moldenfile"
version = "0.1.0"

[dependencies]
colored = "2.0.0"
dissimilar = "1.0.6"
eyre = "0.6.8"
flate2 = "1.0.26"
tempfile = "3.5.0"
