[package]
authors = ["E <edgeworth.dev@gmail.com>"]
categories = ["development-tools"]
description = "test golden file library"
edition = "2024"
keywords = ["golden", "test"]
license = "MIT OR Apache-2.0"
name = "moldenfile"
repository = "https://github.com/Edgeworth/moldenfile"
version = "0.1.0"

[dependencies]
colored = "3.0.0"
dissimilar = "1.0.9"
eyre = "0.6.12"
flate2 = "1.0.35"
tempfile = "3.17.1"
